# ECG-k-Fold

./: .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  STRATIFICATION_GUIDE.md  publish.sh  pyproject.toml
.github/: release-please-config.json
.github/workflows/: ci.yml  hf-dataset-push.yml  publish.yml  release-please.yml
HF_space/: DESCRIPTION.md  README.md  app.py  requirements.txt
notebooks/: deepfake_ecg_analysis.ipynb
scripts/: README.md  make_k_fold_deepfake_ecg.py
src/ecg_k_fold/: __init__.py  cli.py
src/ecg_k_fold/datasets/: __init__.py  push_hf.py
tests/: test_version.py
