[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecg-k-fold"
version = "0.1.0"
description = "ECG k-Fold utilities with Hugging Face dataset push CLI"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "Vajira Thambawita", email = "vlbthambawita@gmail.com"}
]
keywords = ["ecg", "machine-learning", "kfold", "huggingface", "datasets"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "click>=8.1.3",
  "pandas>=2.0.0",
  "pyarrow>=12.0.0",
  "datasets>=2.18.0",
  "huggingface_hub>=0.24.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "ruff>=0.6.0",
  "black>=24.3.0",
  "mypy>=1.8.0",
  "pre-commit>=3.7.0",
  "build>=1.2.1",
  "twine>=5.1.1",
]

[project.scripts]
ecg-k-fold = "ecg_k_fold.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["ecg_k_fold*", "ecg_k_fold.datasets*"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I", "B", "UP", "C4"]
ignore = []

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=ecg_k_fold --cov-report=term-missing"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.9"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

