[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecg-k-fold"
version = "0.1.1"
description = "ECG k-Fold utilities"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Vajira Thambawita", email = "vlbthambawita@gmail.com"}
]
keywords = ["ecg", "machine-learning", "kfold", "huggingface", "datasets"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "ruff>=0.6.0",
  "black>=24.3.0",
  "mypy>=1.8.0",
  "pre-commit>=3.7.0",
  "build>=1.2.1",
  "twine>=5.1.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["ecg_k_fold*"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I", "B", "UP", "C4"]
ignore = []

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=ecg_k_fold --cov-report=term-missing"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.9"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

